--- a/HNInc.Communication.Library/HNInc.Communication.Library.csproj
+++ b/HNInc.Communication.Library/HNInc.Communication.Library.csproj
@@ -5,12 +5,11 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ApplicationIcon />
     <Win32Resource />
-    <AssemblyVersion>0.0.1.6</AssemblyVersion>
-    <FileVersion>0.0.1.6</FileVersion>
-    <Version>0.0.1.6</Version>
+    <AssemblyVersion>0.0.1.7</AssemblyVersion>
+    <FileVersion>0.0.1.7</FileVersion>
+    <Version>0.0.1.7</Version>
     <PackageReleaseNotes>http API 추가
-1. product information API 변경
-- 항상 binary data 포함해서 수신</PackageReleaseNotes>
+1. 함수명 변경</PackageReleaseNotes>
     <Description>CNC Tool Monitoring에 들어가는 Server와의 통신API</Description>
   </PropertyGroup>
 
