--- a/HNInc.Communication.Library/HNInc.Communication.Library.csproj
+++ b/HNInc.Communication.Library/HNInc.Communication.Library.csproj
@@ -5,11 +5,13 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ApplicationIcon />
     <Win32Resource />
-    <AssemblyVersion>0.0.1.7</AssemblyVersion>
-    <FileVersion>0.0.1.7</FileVersion>
-    <Version>0.0.1.7</Version>
-    <PackageReleaseNotes>http API 추가
-1. 함수명 변경</PackageReleaseNotes>
+    <AssemblyVersion>0.0.1.8</AssemblyVersion>
+    <FileVersion>0.0.1.8</FileVersion>
+    <Version>0.0.1.8</Version>
+    <PackageReleaseNotes>Socket Event 추가
+1. 소켓 연결 event
+2. 소켓 연결 시도 event
+3. 소켓 연결 해제 event</PackageReleaseNotes>
     <Description>CNC Tool Monitoring에 들어가는 Server와의 통신API</Description>
   </PropertyGroup>
 
