--- a/HNInc.Communication.Library/HNInc.Communication.Library.csproj
+++ b/HNInc.Communication.Library/HNInc.Communication.Library.csproj
@@ -5,13 +5,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ApplicationIcon />
     <Win32Resource />
-    <AssemblyVersion>0.0.1.9</AssemblyVersion>
-    <FileVersion>0.0.1.9</FileVersion>
-    <Version>0.0.1.9</Version>
-    <PackageReleaseNotes>Socket Event 추가
-1. 소켓 연결 event
-2. 소켓 연결 시도 event
-3. 소켓 연결 해제 event</PackageReleaseNotes>
+    <AssemblyVersion>0.0.1.10</AssemblyVersion>
+    <FileVersion>0.0.1.10</FileVersion>
+    <Version>0.0.1.10</Version>
+    <PackageReleaseNotes>DB 아이피 변경</PackageReleaseNotes>
     <Description>CNC Tool Monitoring에 들어가는 Server와의 통신API</Description>
   </PropertyGroup>
 
