--- a/HNInc.Communication.Library/HNInc.Communication.Library.csproj
+++ b/HNInc.Communication.Library/HNInc.Communication.Library.csproj
@@ -5,10 +5,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ApplicationIcon />
     <Win32Resource />
-    <AssemblyVersion>0.0.1.12</AssemblyVersion>
-    <FileVersion>0.0.1.12</FileVersion>
-    <Version>0.0.1.12</Version>
-    <PackageReleaseNotes>Http Method 수정</PackageReleaseNotes>
+    <AssemblyVersion>0.0.1.13</AssemblyVersion>
+    <FileVersion>0.0.1.13</FileVersion>
+    <Version>0.0.1.13</Version>
+    <PackageReleaseNotes>Http Metond 파라미터 변경</PackageReleaseNotes>
     <Description>CNC Tool Monitoring에 들어가는 Server와의 통신API</Description>
   </PropertyGroup>
 
